test/errors/python_generator_error/zs/module_names/structure_with_subtype_clash_error.zs
package module_names.structure_with_subtype_clash_error;

struct SOME_GOOD_NAME
{
    uint32 field;
};

subtype SOME_GOOD_NAME SomeGoodName;
